--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jbehave.version>4.0-beta-7</jbehave.version>
         <jbehave.site.version>3.2</jbehave.site.version>
-        <junit.version>4.11</junit.version>
+        <junit.version>[4.13.1,)</junit.version>
         <github.maventools.version>0.9</github.maventools.version>
     </properties>
 
